[gd_scene load_steps=3 format=3 uid="uid://dptgttk8gkprg"]

[ext_resource type="Script" path="res://tscn/main_menu.gd" id="1_jlapi"]
[ext_resource type="Script" path="res://server_search.gd" id="2_i1si5"]

[node name="Node3D" type="Node3D"]

[node name="TBLoader" type="TBLoader" parent="."]
map_resource = "res://tbmaps/main_menu.map"

[node name="Node2D" type="Node2D" parent="."]
visible = false
script = ExtResource("1_jlapi")

[node name="CanvasLayer" type="CanvasLayer" parent="Node2D"]

[node name="MainMenu" type="PanelContainer" parent="Node2D/CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -353.0
offset_right = 678.0
offset_bottom = 355.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Node2D/CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="HostButton" type="Button" parent="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="OfflineButton" type="Button" parent="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Offline"

[node name="AddressEntry" type="LineEdit" parent="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="UsernameEntry" type="LineEdit" parent="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "defaultvalue"
placeholder_text = "Enter Username"
alignment = 1

[node name="MapEntry" type="ItemList" parent="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
auto_height = true

[node name="Node" type="Node" parent="Node2D/CanvasLayer/MainMenu"]
script = ExtResource("2_i1si5")

[node name="Copyright" type="Label" parent="Node2D/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -23.0
offset_right = 89.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Â© Joseph Toscano 2024"
horizontal_alignment = 1

[node name="Title" type="Label" parent="Node2D/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -324.0
offset_right = 324.0
offset_bottom = 39.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Wizards With Guns"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="Node2D" method="_on_host_button_pressed"]
[connection signal="pressed" from="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="Node2D" method="_on_join_button_pressed"]
[connection signal="pressed" from="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/OfflineButton" to="Node2D" method="_on_offline_button_pressed"]
[connection signal="item_selected" from="Node2D/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/MapEntry" to="Node2D" method="_on_map_entry_item_selected"]
